[WIP] started moving recipe paths around and accept json body
